--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# source data
+/data/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -25,7 +28,6 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-/data
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
